src/objects/BMCServiceDesk__BMC_ConnectivityCollection__c.object
<CustomObject>
    <description>BMC_ConnectivityCollection. CMDB Class that groups a set of protocol endpoints of the same type that can communicate with each other. It can also group related systems, users, or other base elements. All members of the group must be in the same administrative domain or computer system. The BMC_MemberOfCollection class is used to relate the entities grouped by this class.   This class corresponds to the DMTF CIM_ConnectivityCollection class.</description>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityCollectionType__c</fullName>
        <label>Connectivity Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>ConnectivitySegment</fullName>
                </value>
                <value>
                    <fullName>IPConnectivitySubnet</fullName>
                </value>
                <value>
                    <fullName>IPXConnectivityNetwork</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>WAN</fullName>
                </value>
                <value>
                    <fullName>FCConnectivitySegment</fullName>
                </value>
                <value>
                    <fullName>SystemCollection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityStatus__c</fullName>
        <label>Connectivity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Connectivity/Up</fullName>
                </value>
                <value>
                    <fullName>No Connectivity/Down</fullName>
                </value>
                <value>
                    <fullName>Partitioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Connectivity Collection</label>
    <nameField>
        <label>BMC_ConnectivityCollection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connectivity Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>